--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,28 @@
 body {
   margin: 0;
   padding: 3%;
-  font-family: sans-serif;
+  font-family: 'Fredericka the Great', sans-serif;
+  background-image: url('/../chalkboard.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+h1 {
+  font-family: 'Fredericka the Great', sans-serif;
+  color: white;
+  font-size: 60px;
+}
+
+#wrapper {
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+#languages {
+  font-family: courier;
+}
+
+#bio {
+  font-size: 15px;
+  text-align: center;
+  color: rgb(200, 200, 200);
 }
