--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,12 @@ body {
   background-image: url('/../chalkboard.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  width: 100%;
+  overflow: hidden;
 }
 
 h1 {
